# APICostX-Searchbox

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  check_keys.py  main.py  main.py.bak-free-first-20260606  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
docs/: README.md  function-and-endpoint-inventory.md  install-and-operations.md  llm-logging-and-health.md  provider-limits-and-cooldowns.md  scientific-providers.md  searchbox-api.md  searchbox-architecture.md  testing-and-quality.md
docs/patches/: searchbox-advanced-retrieval-and-logging.md  searchbox-serpapi-google-scholar.md
public-docs/: README.md  contributing.md  main-file-refactor-plan.md  open-source-productization-roadmap.md  overview.md  quickstart.md  security.md
public-docs/architecture/: README.md  aggregation.md  quotas-and-cooldowns.md  (+2 more)
scripts/: github_gatekeeper.py
searchbox/: __init__.py  aggregation.py  app.py  auth.py  defaults.py  logging_utils.py  models.py  rate_limit.py  scoring.py  search_options.py  text.py  urls.py  usage.py
tests/: test_advanced_search_fallbacks.py  test_openapi_contracts.py  test_public_contract.py  test_refactor_contracts.py  test_reliability_contracts.py  test_reliability_contracts.py.bak-free-first-20260606  test_searchbox_api_contracts.py
(+26 files in other folders)
