[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "searchbox"
version = "0.1.0"
description = "Self-hosted retrieval gateway for web and scientific search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Searchbox contributors" }]
keywords = ["search", "retrieval", "agents", "research", "arxiv", "google-scholar"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "litellm>=1.0,<2",
  "playwright>=1.40,<2",
  "pydantic>=2,<3",
  "pypdf>=6.10.2,<7",
  "python-dotenv>=1,<2",
  "trafilatura>=1.8,<3",
  "uvicorn[standard]>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6,<7",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
  "pip-audit>=2.7,<3",
  "pre-commit>=4,<5",
  "pytest-cov>=6,<7",
]

[tool.setuptools]
py-modules = ["main", "check_keys"]

[tool.setuptools.packages.find]
where = ["."]
include = ["searchbox*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"